Add setting for imports in CommonJS and ES Modules

--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "libraryblue-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
+  "exports": {
+    ".": {
+      "require": "./index.js"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
